Fix carousel styling to center and make arrows visible and functional

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,7 +10,8 @@
   text-align: center;
 }
 #events {
-  margin: 20px;
+  margin: auto;
+  padding: 0% 10%;
 }
 
 img {
@@ -45,6 +46,10 @@ form {
 }
 
 .centered {
+  text-align: center;
+}
+
+/* .centered {
   padding-top: 200px;
   text-align: center;
 }
@@ -97,7 +102,7 @@ form {
   .card .img-wrapper {
     height: 17em;
   }
-}
+} */
 
 .inline {
   display: inline;
@@ -114,4 +119,55 @@ form {
 }
 .link-button:active {
   color: red;
+}
+
+@media (max-width: 767px) {
+  .carousel-inner .carousel-item > div {
+    display: none;
+  }
+  .carousel-inner .carousel-item > div:first-child {
+    display: block;
+  }
+}
+
+.carousel-inner .carousel-item.active,
+.carousel-inner .carousel-item-next,
+.carousel-inner .carousel-item-prev {
+  display: flex;
+  position: relative;
+  margin: auto;
+  align-items: center;
+}
+
+/* medium and up screens */
+@media (min-width: 768px) {
+  .carousel-inner .carousel-item-end.active,
+  .carousel-inner .carousel-item-next {
+    transform: translateX(33%);
+  }
+
+  .carousel-inner .carousel-item-start.active,
+  .carousel-inner .carousel-item-prev {
+    transform: translateX(-33%);
+  }
+}
+
+.carousel-inner .carousel-item-end,
+.carousel-inner .carousel-item-start {
+  transform: translateX(0);
+}
+
+.col-4 {
+  padding: 10px;
+}
+
+.card-title-custom {
+  height: 50px;
+}
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+}
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
 }
